; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_UpdateDistNodeBoolAttr.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_UpdateDistNodeBoolAttr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@Natts_pg_dist_node = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@Anum_pg_dist_node_nodename = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_TEXTEQ = common dso_local global i32 0, align 4
@Anum_pg_dist_node_nodeport = common dso_local global i32 0, align 4
@F_INT4EQ = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"could not find valid entry for node \22%s:%d\22\00", align 1
@NoLock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i32)* @UpdateDistNodeBoolAttr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UpdateDistNodeBoolAttr(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca [2 x i32], align 4
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_7__*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  store i32* null, i32** %13, align 8
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %14, align 8
  %19 = load i32, i32* @Natts_pg_dist_node, align 4
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %15, align 8
  %22 = alloca i32, i64 %20, align 16
  store i64 %20, i64* %16, align 8
  %23 = load i32, i32* @Natts_pg_dist_node, align 4
  %24 = zext i32 %23 to i64
  %25 = alloca i32, i64 %24, align 16
  store i64 %24, i64* %17, align 8
  %26 = load i32, i32* @Natts_pg_dist_node, align 4
  %27 = zext i32 %26 to i64
  %28 = alloca i32, i64 %27, align 16
  store i64 %27, i64* %18, align 8
  %29 = call i32 (...) @DistNodeRelationId()
  %30 = load i32, i32* @RowExclusiveLock, align 4
  %31 = call i32* @heap_open(i32 %29, i32 %30)
  store i32* %31, i32** %10, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = call i32* @RelationGetDescr(i32* %32)
  store i32* %33, i32** %11, align 8
  %34 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 0
  %35 = load i32, i32* @Anum_pg_dist_node_nodename, align 4
  %36 = load i32, i32* @BTEqualStrategyNumber, align 4
  %37 = load i32, i32* @F_TEXTEQ, align 4
  %38 = load i8*, i8** %5, align 8
  %39 = call i32 @CStringGetTextDatum(i8* %38)
  %40 = call i32 @ScanKeyInit(i32* %34, i32 %35, i32 %36, i32 %37, i32 %39)
  %41 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 1
  %42 = load i32, i32* @Anum_pg_dist_node_nodeport, align 4
  %43 = load i32, i32* @BTEqualStrategyNumber, align 4
  %44 = load i32, i32* @F_INT4EQ, align 4
  %45 = load i32, i32* %6, align 4
  %46 = call i32 @Int32GetDatum(i32 %45)
  %47 = call i32 @ScanKeyInit(i32* %41, i32 %42, i32 %43, i32 %44, i32 %46)
  %48 = load i32*, i32** %10, align 8
  %49 = load i32, i32* @InvalidOid, align 4
  %50 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 0
  %51 = call i32* @systable_beginscan(i32* %48, i32 %49, i32 0, i32* null, i32 2, i32* %50)
  store i32* %51, i32** %13, align 8
  %52 = load i32*, i32** %13, align 8
  %53 = call %struct.TYPE_7__* @systable_getnext(i32* %52)
  store %struct.TYPE_7__* %53, %struct.TYPE_7__** %14, align 8
  %54 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %55 = call i32 @HeapTupleIsValid(%struct.TYPE_7__* %54)
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %63, label %57

57:                                               ; preds = %4
  %58 = load i32, i32* @ERROR, align 4
  %59 = load i8*, i8** %5, align 8
  %60 = load i32, i32* %6, align 4
  %61 = call i32 @errmsg(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i8* %59, i32 %60)
  %62 = call i32 @ereport(i32 %58, i32 %61)
  br label %63

63:                                               ; preds = %57, %4
  %64 = mul nuw i64 4, %27
  %65 = trunc i64 %64 to i32
  %66 = call i32 @memset(i32* %28, i32 0, i32 %65)
  %67 = load i32, i32* %8, align 4
  %68 = call i32 @BoolGetDatum(i32 %67)
  %69 = load i32, i32* %7, align 4
  %70 = sub nsw i32 %69, 1
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds i32, i32* %22, i64 %71
  store i32 %68, i32* %72, align 4
  %73 = load i32, i32* %7, align 4
  %74 = sub nsw i32 %73, 1
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds i32, i32* %25, i64 %75
  store i32 0, i32* %76, align 4
  %77 = load i32, i32* %7, align 4
  %78 = sub nsw i32 %77, 1
  %79 = sext i32 %78 to i64
  %80 = getelementptr inbounds i32, i32* %28, i64 %79
  store i32 1, i32* %80, align 4
  %81 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %82 = load i32*, i32** %11, align 8
  %83 = call %struct.TYPE_7__* @heap_modify_tuple(%struct.TYPE_7__* %81, i32* %82, i32* %22, i32* %25, i32* %28)
  store %struct.TYPE_7__* %83, %struct.TYPE_7__** %14, align 8
  %84 = load i32*, i32** %10, align 8
  %85 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %86 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %85, i32 0, i32 0
  %87 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %88 = call i32 @CatalogTupleUpdate(i32* %84, i32* %86, %struct.TYPE_7__* %87)
  %89 = call i32 (...) @DistNodeRelationId()
  %90 = call i32 @CitusInvalidateRelcacheByRelid(i32 %89)
  %91 = call i32 (...) @CommandCounterIncrement()
  %92 = load i32*, i32** %13, align 8
  %93 = call i32 @systable_endscan(i32* %92)
  %94 = load i32*, i32** %10, align 8
  %95 = load i32, i32* @NoLock, align 4
  %96 = call i32 @heap_close(i32* %94, i32 %95)
  %97 = load i8*, i8** %15, align 8
  call void @llvm.stackrestore(i8* %97)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @heap_open(i32, i32) #2

declare dso_local i32 @DistNodeRelationId(...) #2

declare dso_local i32* @RelationGetDescr(i32*) #2

declare dso_local i32 @ScanKeyInit(i32*, i32, i32, i32, i32) #2

declare dso_local i32 @CStringGetTextDatum(i8*) #2

declare dso_local i32 @Int32GetDatum(i32) #2

declare dso_local i32* @systable_beginscan(i32*, i32, i32, i32*, i32, i32*) #2

declare dso_local %struct.TYPE_7__* @systable_getnext(i32*) #2

declare dso_local i32 @HeapTupleIsValid(%struct.TYPE_7__*) #2

declare dso_local i32 @ereport(i32, i32) #2

declare dso_local i32 @errmsg(i8*, i8*, i32) #2

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @BoolGetDatum(i32) #2

declare dso_local %struct.TYPE_7__* @heap_modify_tuple(%struct.TYPE_7__*, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @CatalogTupleUpdate(i32*, i32*, %struct.TYPE_7__*) #2

declare dso_local i32 @CitusInvalidateRelcacheByRelid(i32) #2

declare dso_local i32 @CommandCounterIncrement(...) #2

declare dso_local i32 @systable_endscan(i32*) #2

declare dso_local i32 @heap_close(i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
